Bug 704709: Don't free the background pixmap created by gv

Because it might free a pixmap that was created by gv as a backing pixmap
and might still be used by gv for further drawing.